--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-/* Section style start */
+/* section style start */
 .section__title {
   line-height: 0.42;
   margin-bottom: 34px;
@@ -56,10 +58,10 @@ body {
   left: 50%;
 }
 
-/* Section style end */
+/* section style end */
 
 
-/* Button style start */
+/* button style start */
 .button {
   padding: 14px 25px;
   box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.5);
@@ -73,9 +75,9 @@ body {
   background-color: #ff6033;
 }
 
-/* Button style end */
+/* button style end */
 
-/* Header style start */
+/* header style start */
 .header {
   display: flex;
   align-items: center;
@@ -110,8 +112,7 @@ body {
   content: "";
   width: 100%;
 }
-
-/* Header style end */
+/* header style end */
 
 /* section service */
 .section--service {
@@ -164,6 +165,141 @@ body {
   margin-top: 6%;
 }
   
+/* section gallery */
+.section--gallery {
+  background: #ffe92f;
+  padding-top: 100px;
+  padding-bottom: 140px;
+}
+
+.title--secondary {
+  font-size: 90px;
+  color: #fff;
+  margin-bottom: 30px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.subtitle {
+  line-height: 1.47;
+  font-size: 17px;
+  margin-bottom: 47px;
+  color: #fff;
+  max-width: 574px;
+  margin: 0 auto 40px;
+  text-align: center;
+}
+
+.title--secondary {
+  color: #000;
+}
+
+.subtitle--secondary {
+  color: #000;
+}
+
+.gallary__item {
+  width: 100%;
+}
+
+.gallary__item img {
+width: 100%;
+}
+
+.two--items--col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.two--items--col-6 {
+  margin-top: 20px; 
+}
+
+.gallery__button {
+  font-size: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #ffffff;
+  width: 200px;
+  height: 55px;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.5);
+  background-color: #5585a2;
+  display: block;
+  margin: 40px auto 0;
+  border: none;
+  transition: all 0.5s ease;
+}
+
+.gallery__button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 8px 10px 0 rgb(0 0 0 / 0.3);
+}
+
+.gallary__item {
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease;
+}
+
+.gallary__item:hover {
+  transform: scale(1.05);
+}
+
+/* section subscribe */
+.section--subscribe {
+background: url(../images/subscribe.png);
+padding: 140px 0 165px 0;
+background-position: right center;
+background-repeat: no-repeat;
+}
+
+.subscribe__title {
+  font-size: 40px;
+  line-height: 27px;
+  color: #262626;
+  font-weight: 700;
+}
+
+.subscribe__subtitle {
+  max-width: 572px;
+  height: 50px;
+  font-size: 17px;
+  line-height: 27px;
+  color: #262626;
+  font-weight: 300;
+  margin: 30px 0;
+}
+
+.subscribe-input {
+  width: 100%;
+  height: 55px;
+  padding-left: 15px;
+}
+
+.subscribe-input::placeholder {
+  font-size: 15px;
+  line-height: 27px;
+  color: #262626;
+  font-weight: 300;
+}
+
+.subscribe-button {
+  width: 100%;
+  height: 55px;
+  background: #96b92c;
+  font-size: 20px;
+  line-height: 27px;
+  color: #ffffff;
+  font-weight: 300;
+  text-transform: uppercase;
+  border: none;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease;
+}
+
+.subscribe-button:hover {
+  transform: scale(1.1);
+}
 
 /* section my blog */
 .section--blog {
@@ -300,7 +436,6 @@ body {
 }
 
 /* section contacts */
-
 .section__contact {
   background: url(../images/contact-bg.png) no-repeat center/cover;
   min-height: 100vh;
@@ -380,7 +515,7 @@ body {
   margin-top: 0;
 } 
 
-/* footer */
+/* section footer */
 .section__footer--copyright {
   font-size: 16px;
   font-weight: 300;
